services/monitoring-stack/prometheus/basic-auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth-prometheus
  namespace: monitoring
spec:
  basicAuth:
    secret: basic-auth-prometheus
