services/monitoring-stack/prometheus/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - name: prometheus
      namespace: monitoring
      sectionName: https
  hostnames:
    - "prometheus.CHANGEME_DOMAIN"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: basic-auth-prometheus
      backendRefs:
        - name: prometheus
          port: 9090
